--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/animejs": "^3.1.13",
     "@types/pg": "^8.15.5",
+    "@vercel/analytics": "^1.5.0",
     "animejs": "^4.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
